--- a/bhanu.adobe@sfdc.com/src/package.xml
+++ b/bhanu.adobe@sfdc.com/src/package.xml
@@ -18,6 +18,10 @@
     </types>
     <types>
         <members>*</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>*</members>
         <name>ApexTestSuite</name>
     </types>
     <types>
